[package]
name = "unimonkiez-rsntp"
version = "4.0.1"
authors = ["Yuval Saraf <unimonkiez@gmail.com>"]
repository = "https://github.com/unimonkiez/rsntp"
documentation = "https://docs.rs/unimonkiez-rsntp"
edition = "2021"
keywords = ["sntp", "time", "async"] 
categories = ["network-programming"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "An RFC 5905 compliant Simple Network Time Protocol (SNTP) client library for Rust"

[features]
default = ["async", "chrono"]
async = ["tokio"]

[dependencies]
chrono = { version = "^0.4.10", optional = true }
time = { version = "^0.3.7", optional = true }
tokio = { version = "^1.0", features = ["net", "time"], optional = true }

[dev-dependencies]
tokio = { version = "^1.0.26", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
